welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:37: error: '=' expected but 'for' found.
	def ligne(a:Color,b:Color,c:Color,d:Color) for (j<-1 to 2) {
                                                   ^PatternPicture:42: error: illegal start of simple expression
	for(l<-1 to 2) {
^