welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {

	def motif(x:Color) {
		setCouleurBrosse(x)
		avance()
		baisseBrosse()
		leveBrosse()
		recule()
		gauche()
		avance()
		baisseBrosse()
		leveBrosse()
		recule()
		droite(e)
	}

	def grandMotif(a:Color,b:Color,c:Color,d:Color) {
		motif(a)
		for (i<-1 to 3)
			avance()
		gauche()
		motif(b)
		for (i<-1 to 3)
			avance()
		gauche()
		motif(c)
		for (i<-1 to 3)
			avance()
		gauche()
		motif(d)
		for (i<-1 to 3)
			avance()
		gauche()
	}

	def ligne(a:Color,b:Color,c:Color,d:Color) for (j<-1 to 2) {
		grandMotif(a,b,c,d)
		for (k<-1 to 4) avance()
	}

	for(l<-1 to 2) {
		ligne(Color.RED,Color.BLUE,Color.GREEN,Color.YELLOW)
		gauche()
		for (i<-1 to 4) avance()
		droite()
	}
}
